Training ready scripts

--- a/Data Collection/Data Collection.ipynb
+++ b/Data Collection/Data Collection.ipynb
@@ -11,10 +11,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from configuration_generator import Configurations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = Configurations()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.generateConfigurations()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### PyTorch Trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA Toolkit available for PyTorch\n",
+      "GPU: GeForce GTX 1050 Ti\n",
+      "\n",
+      "Loading train data\n",
+      "Files already downloaded and verified\n",
+      "\n",
+      "Loading test data\n",
+      "Files already downloaded and verified\n",
+      "\n",
+      "########################################\n",
+      "# Running configuration: 0  \n",
+      "########################################\n",
+      "\n",
+      "########################################\n",
+      "# resnet18 on GeForce GTX 1050 Ti \n",
+      "########################################\n",
+      "Updated last layer: fc\n",
+      "Epoch 1/1                                                                                                                                             \n",
+      "----------\n",
+      "#############################################################    Loss=2.291, Accuracy=17.652%\n",
+      "\n",
+      "Training data saved successfully.\n",
+      "\n",
+      "\n",
+      "########################################\n",
+      "# Running configuration: 1  \n",
+      "########################################\n",
+      "\n",
+      "########################################\n",
+      "# resnet18 on GeForce GTX 1050 Ti \n",
+      "########################################\n",
+      "Updated last layer: fc\n",
+      "Epoch 1/1                                                                                                                                             \n",
+      "----------\n",
+      "##################################################################    Loss=2.186, Accuracy=19.154%\n",
+      "\n",
+      "Training data saved successfully.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run trainer_pytorch.py -c \"0,1\" -d \"data/\" -s \"training_data/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from trainer_pytorch import torch_trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data saved successfully.\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Tensorflow"
+   ]
   },
   {
    "cell_type": "code",
@@ -394,487 +520,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from trainer_pytorch import run_training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run_training()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function, division\n",
-    "\n",
-    "import os\n",
-    "import copy\n",
-    "import pickle\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from pandas import DataFrame\n",
-    "from time import time\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "from collections import defaultdict\n",
-    "from itertools import accumulate\n",
-    "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torch.optim import lr_scheduler\n",
-    "import torch.autograd.profiler as profiler\n",
-    "\n",
-    "import torchvision\n",
-    "from torchvision import datasets, models, transforms\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = models.resnet18()\n",
-    "inputs = torch.randn(5, 3, 224, 224)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with profiler.profile(use_cuda=True) as prof:\n",
-    "    with profiler.record_function(\"model_inference\"):\n",
-    "        model(torch.randn(5, 3, 224, 224))\n",
-    "        model(torch.randn(5, 3, 224, 224))\n",
-    "        model(torch.randn(5, 3, 224, 224))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(prof)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with profiler.profile(use_cuda=True) as prof:\n",
-    "    \n",
-    "    model(torch.randn(5, 3, 224, 224))\n",
-    "    model(torch.randn(5, 3, 224, 224))\n",
-    "    model(torch.randn(5, 3, 224, 224))\n",
-    "    model(torch.randn(5, 3, 224, 224))\n",
-    "    model(torch.randn(5, 3, 224, 224))\n",
-    "    model(torch.randn(5, 3, 224, 224))\n",
-    "    model(torch.randn(5, 3, 224, 224))\n",
-    "    model(torch.randn(5, 3, 224, 224))\n",
-    "    model(torch.randn(5, 3, 224, 224))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(prof)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from trainer_pytorch import load_config, torch_trainer, run_training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files already downloaded and verified\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_data = datasets.CIFAR10(root='data/',\n",
-    "                              train=True,\n",
-    "                              transform=train_transform,\n",
-    "                              download=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files already downloaded and verified\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_data = datasets.CIFAR10(root='data/',\n",
-    "                              train=False,\n",
-    "                              transform=test_transform,\n",
-    "                              download=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_loader = torch.utils.data.DataLoader(dataset=train_data,\n",
-    "                                           batch_size=config['batch_size'],\n",
-    "                                           shuffle=True,\n",
-    "                                           pin_memory=True,\n",
-    "                                           num_workers=num_workers_on_data_loader)\n",
-    "\n",
-    "test_loader = torch.utils.data.DataLoader(dataset=test_data,\n",
-    "                                           batch_size=config['batch_size'],\n",
-    "                                           shuffle=False,\n",
-    "                                           pin_memory=True,\n",
-    "                                           num_workers=num_workers_on_data_loader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = models.resnet18()\n",
-    "config['model_name'] = 'Resnet18'\n",
-    "config['num_of_paramters'] = sum(p.numel() for p in model.parameters())\n",
-    "config['gpu'] = torch.cuda.get_device_name()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = models.resnet18()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = models.resnet18()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with profiler.profile(record_shapes=True) as prof:\n",
-    "    with profiler.record_function(\"model_inference\"):\n",
-    "        model(inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inputs = torch.randn(5, 3, 224, 224)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------------------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
-      "                             Name    Self CPU %      Self CPU   CPU total %     CPU total  CPU time avg    # of Calls  \n",
-      "---------------------------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
-      "                  model_inference         5.73%      16.971ms        99.99%     295.928ms     295.928ms             1  \n",
-      "                     aten::conv2d         0.07%     216.400us        52.37%     154.979ms       7.749ms            20  \n",
-      "                aten::convolution         0.07%     200.800us        52.29%     154.762ms       7.738ms            20  \n",
-      "               aten::_convolution         0.24%     720.500us        52.23%     154.562ms       7.728ms            20  \n",
-      "         aten::mkldnn_convolution        51.81%     153.318ms        51.97%     153.793ms       7.690ms            20  \n",
-      "                 aten::batch_norm         0.07%     200.600us        24.25%      71.774ms       3.589ms            20  \n",
-      "     aten::_batch_norm_impl_index         0.09%     260.600us        24.18%      71.573ms       3.579ms            20  \n",
-      "          aten::native_batch_norm        13.98%      41.377ms        24.06%      71.198ms       3.560ms            20  \n",
-      "                      aten::relu_         0.13%     373.600us         9.83%      29.088ms       1.711ms            17  \n",
-      "                 aten::threshold_         9.70%      28.714ms         9.70%      28.714ms       1.689ms            17  \n",
-      "---------------------------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
-      "Self CPU time total: 295.950ms\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(prof.key_averages().table(sort_by=\"cpu_time_total\", row_limit=10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "########################################\n",
-      "# Resnet18 on GPU: GeForce GTX 1050 Ti \n",
-      "########################################\n",
-      "Epoch 1/2                                                                                                                                             \n",
-      "----------\n",
-      "##################################################################    Loss=1.635, Accuracy=40.326%\n",
-      "\n",
-      "Epoch 2/2                                                                                                                                             \n",
-      "----------\n",
-      "##################################################################    Loss=1.295, Accuracy=53.406%\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "trainer.train(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainer.save_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from trainer_pytorch import run_training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run_training()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = {\n",
-    "    'config_index': 0,\n",
-    "    \n",
-    "    # model\n",
-    "    'model_name': '',\n",
-    "    'num_of_paramters': 0,\n",
-    "    'num_of_layers': 0,\n",
-    "    'model_type': 'cnn',\n",
-    "    \n",
-    "    \n",
-    "    # hardware\n",
-    "    'gpu': '',\n",
-    "    'is_distributed': False,\n",
-    "    'distributed_strategy': 'None',\n",
-    "    'num_of_nodes': 1,\n",
-    "    'num_of_gpus': 1,\n",
-    "    \n",
-    "    # dataset\n",
-    "    'dataset': '',\n",
-    "    \n",
-    "    # hyper-parameters\n",
-    "    'batch_size': 32,\n",
-    "    'learning_rate': 0.01,\n",
-    "    'momentum': 0.9,\n",
-    "    'weight_decay': 1e-4,\n",
-    "    'gamma': 0.1,\n",
-    "    'milestones': '60,80',\n",
-    "    'lr_scheduler': '',\n",
-    "    'optimizer':'',\n",
-    "    'criterion': ''   \n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = {\n",
-    "    # 'config_index': 0,\n",
-    "    \n",
-    "    # model\n",
-    "    'model_name': [ 'Alexnet', 'Resnet18', 'Resnet32', 'Resnet44/40', 'Resnet56'],\n",
-    "    'num_of_paramters': 0,\n",
-    "    'num_of_layers': 0\n",
-    "    \n",
-    "    # hardware\n",
-    "    'gpu': ['P100', 'V100', 'P40'],\n",
-    "    \n",
-    "    # hyper-parameters\n",
-    "    'batch_size': 32, 128, 512\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "45"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[5 * 3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Epoch time\n",
-    "# Time to Accuracy 90%\n",
-    "# Epochs to Accuracy 90%"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Training - PyTorch\n",
-    "# Config - "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = {\n",
-    "    'config_index': 0,\n",
-    "    \n",
-    "    # model\n",
-    "    'model_name': 'Alexnet',\n",
-    "    'num_of_paramters': 0,\n",
-    "    'num_of_layers': 0,\n",
-    "    'model_type': 'cnn',\n",
-    "    \n",
-    "    \n",
-    "    # hardware\n",
-    "    'gpu': 'P100',\n",
-    "    'is_distributed': False,\n",
-    "    'distributed_strategy': 'None',\n",
-    "    'num_of_nodes': 1,\n",
-    "    'num_of_gpus': 1,\n",
-    "    \n",
-    "    # dataset\n",
-    "    'dataset': '',\n",
-    "    \n",
-    "    # hyper-parameters\n",
-    "    'batch_size': 32,\n",
-    "    'learning_rate': 0.01,\n",
-    "    'momentum': 0.9,\n",
-    "    'weight_decay': 1e-4,\n",
-    "    'gamma': 0.1,\n",
-    "    'milestones': '60,80',\n",
-    "    'lr_scheduler': '',\n",
-    "    'optimizer':'',\n",
-    "    'criterion': ''   \n",
-    "}"
-   ]
   },
   {
    "cell_type": "code",
