Fixed training script

--- a/Data Collection/Data Collection.ipynb
+++ b/Data Collection/Data Collection.ipynb
@@ -99,11 +99,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA Toolkit available for PyTorch\n",
+      "GPU: GeForce GTX 1050 Ti\n",
+      "\n",
+      "Loading train data\n",
+      "Files already downloaded and verified\n",
+      "\n",
+      "Loading test data\n",
+      "Files already downloaded and verified\n",
+      "\n",
+      "########################################\n",
+      "# resnet18 on GeForce GTX 1050 Ti \n",
+      "########################################\n",
+      "Updated last layer: fc\n",
+      "Epoch 1/1                                                                                                                                             \n",
+      "----------\n",
+      "##################################################################    Loss=2.181, Accuracy=19.252%\n",
+      "\n",
+      "Training data saved successfully.\n"
+     ]
+    }
+   ],
    "source": [
-    "from trainer_pytorch import torch_trainer"
+    "%run trainer_pytorch.py -d data/ -e 1 -s training_data/"
    ]
   },
   {
