Removed resize and random crop

--- a/Data Collection/Data Collection.ipynb
+++ b/Data Collection/Data Collection.ipynb
@@ -133,10 +133,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%run trainer_pytorch.py -d \"data/\" -s \"training_data/\" -w 0 -e 3 -b 32 -lr 0.1"
+   ]
   },
   {
    "cell_type": "code",
