Added distributed data parallel test code

--- a/Data Collection/Data Collection.ipynb
+++ b/Data Collection/Data Collection.ipynb
@@ -148,18 +148,479 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Parallel"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_p = nn.DataParallel(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Distributed Data Parallel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import pickle\n",
+    "import argparse\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from time import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.optim import lr_scheduler\n",
+    "\n",
+    "from torchvision import datasets, models, transforms\n",
+    "\n",
+    "from configuration_generator import Configurations\n",
+    "\n",
+    "import torch.distributed as dist\n",
+    "import torch.multiprocessing as mp\n",
+    "\n",
+    "from torch.nn.parallel import DistributedDataParallel as DDP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from trainer_pytorch import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data, test_data = load_cifar10_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setup(rank, world_size):\n",
+    "    if sys.platform == 'win32':\n",
+    "        # Distributed package only covers collective communications with Gloo\n",
+    "        # backend and FileStore on Windows platform. Set init_method parameter\n",
+    "        # in init_process_group to a local file.\n",
+    "        # Example init_method=\"file:///f:/libtmp/some_file\"\n",
+    "        init_method=\"file:///C:\\\\Users\\\\sukum\\\\Documents\\\\Grad\\\\Cloud and ML\\\\Homeworks\\\\Project 2\\\\Code\\\\distributed-training\\\\Data Collection\\\\file\"\n",
+    "\n",
+    "        # initialize the process group\n",
+    "        dist.init_process_group(\n",
+    "            \"gloo\",\n",
+    "            init_method=init_method,\n",
+    "            rank=rank,\n",
+    "            world_size=world_size\n",
+    "        )\n",
+    "    else:\n",
+    "        os.environ['MASTER_ADDR'] = 'localhost'\n",
+    "        os.environ['MASTER_PORT'] = '12355'\n",
+    "\n",
+    "        # initialize the process group\n",
+    "        # dist.init_process_group(\"gloo\", rank=rank, world_size=world_size)\n",
+    "        dist.init_process_group(\"nccl\", rank=rank, world_size=world_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cleanup():\n",
+    "    dist.destroy_process_group()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _test(cnn, criterion):        \n",
+    "    cnn.eval()\n",
+    "    correct, total = 0., 0.\n",
+    "    xentropy_loss_avg_val = 0.\n",
+    "\n",
+    "    test_start_time = time()\n",
+    "    for i, (images, labels) in enumerate(test_loader):\n",
+    "        images = images.cuda()\n",
+    "        labels = labels.cuda()\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            pred = cnn(images)\n",
+    "\n",
+    "        xentropy_loss = criterion(pred, labels)\n",
+    "        xentropy_loss_avg_val += xentropy_loss.item() \n",
+    "\n",
+    "        pred = torch.max(pred.data, 1)[1]\n",
+    "        total += labels.size(0)\n",
+    "        correct += (pred == labels).sum().item()\n",
+    "\n",
+    "    training_log['test_timings'].append(time() - test_start_time)\n",
+    "    training_log['test_error'].append(xentropy_loss_avg_val / (i + 1))\n",
+    "    val_acc = correct / total\n",
+    "    cnn.train()\n",
+    "    return val_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(rank, world_size):\n",
+    "    \"\"\"\n",
+    "    Train function\n",
+    "\n",
+    "    Capture the training statistics\n",
+    "    num_epochs - No. of epochs\n",
+    "    \"\"\"\n",
+    "    print(f'Setting up DDP for rank {rank}.')\n",
+    "    setup(rank, world_size)\n",
+    "    torch.cuda.set_device(rank)\n",
+    "    \n",
+    "    config = load_config()\n",
+    "    config['learning_rate'] = 0.1\n",
+    "    config['batch_size'] = 512\n",
+    "    \n",
+    "    train_loader, test_loader = get_dataloaders(train_data, test_data, config)\n",
+    "    \n",
+    "    training_log = {'train_acc': [],\n",
+    "                     'test_acc': [],\n",
+    "                     'train_loss': [],\n",
+    "                     'test_error': [],\n",
+    "                     'epoch_timings': [],\n",
+    "                     'test_timings': []\n",
+    "                    }\n",
+    "\n",
+    "    model = DDP(models.__getattribute__(config['model_name'])(), device_ids=[rank], output_device=rank)\n",
+    "    \n",
+    "    config['num_of_paramters'] = sum(p.numel() for p in model.parameters())\n",
+    "    config['gpu'] = torch.cuda.get_device_name()\n",
+    "    \n",
+    "    num_epochs = 10\n",
+    "    print('\\n' + ('#' * 40) + \n",
+    "          '\\n# {} on {} \\n'.format(config['model_name'], \n",
+    "                                   config['gpu']) + \n",
+    "          ('#' * 40))\n",
+    "    if 'fc' in model.__dir__():\n",
+    "        num_ftrs = model.fc.in_features\n",
+    "        model.fc = nn.Linear(num_ftrs, len(train_loader.dataset.classes))\n",
+    "        print(f'Updated last layer: fc')\n",
+    "    elif 'classifier' in model.__dir__():\n",
+    "        last_layer = len(model.classifier) - 1\n",
+    "        num_ftrs = model.classifier[last_layer].in_features\n",
+    "        model.classifier[last_layer] = nn.Linear(num_ftrs, len(train_loader.dataset.classes))\n",
+    "        print(f'Updated last layer: classifier[{last_layer}]')\n",
+    "\n",
+    "    cnn = model.cuda()\n",
+    "    criterion = nn.CrossEntropyLoss().cuda()\n",
+    "    cnn_optimizer = optim.SGD(cnn.parameters(),\n",
+    "                              lr=config['learning_rate'],\n",
+    "                              momentum=config['momentum'], \n",
+    "                              nesterov=True,\n",
+    "                              weight_decay=config['weight_decay'])\n",
+    "    scheduler = lr_scheduler.MultiStepLR(cnn_optimizer, \n",
+    "                                         list(map(lambda x: int(x), \n",
+    "                                                  config['milestones'].split(','))),\n",
+    "                                         gamma=config['gamma'])\n",
+    "\n",
+    "    print_bound, print_output = 3, True\n",
+    "    p = len(train_loader) // 60\n",
+    "\n",
+    "    training_start_time = time()\n",
+    "    for epoch in range(num_epochs):\n",
+    "        epoch_start_time = time()\n",
+    "\n",
+    "        if epoch < print_bound or epoch >= num_epochs - print_bound:\n",
+    "            print_output = True\n",
+    "        elif epoch == print_bound:\n",
+    "            print('.\\n.\\n.\\n')\n",
+    "            print_output = False\n",
+    "\n",
+    "        __print__, __result__ = '', ''\n",
+    "        print(' ' * 150, end='\\r')\n",
+    "        if print_output:\n",
+    "            print(f'Epoch {epoch + 1}/{num_epochs}')\n",
+    "            print('-' * 10)\n",
+    "        else:\n",
+    "            __print__ = f'Epoch {epoch + 1}/{num_epochs}: '\n",
+    "            print(__print__, end='\\r')\n",
+    "\n",
+    "        xentropy_loss_avg = 0.\n",
+    "        correct = 0.\n",
+    "        total = 0.\n",
+    "\n",
+    "        for i, (images, labels) in enumerate(train_loader):\n",
+    "\n",
+    "            if i % p == 0:\n",
+    "                __print__ += '#'\n",
+    "                print(__print__ + __result__, end='\\r')\n",
+    "\n",
+    "            images = images.cuda()\n",
+    "            labels = labels.cuda()\n",
+    "\n",
+    "            cnn.zero_grad()\n",
+    "            pred = cnn(images)\n",
+    "\n",
+    "            xentropy_loss = criterion(pred, labels)\n",
+    "            xentropy_loss.backward()\n",
+    "            cnn_optimizer.step()\n",
+    "\n",
+    "            xentropy_loss_avg += xentropy_loss.item()\n",
+    "\n",
+    "            # Calculate running average of accuracy\n",
+    "            pred = torch.max(pred.data, 1)[1]\n",
+    "            total += labels.size(0)\n",
+    "            correct += (pred == labels.data).sum().item()\n",
+    "            accuracy = correct / total\n",
+    "\n",
+    "            __result__ = '    Loss=%.3f, Accuracy=%.3f' % (xentropy_loss_avg / (i + 1), \n",
+    "                                                           accuracy*100) + '%'\n",
+    "            print(__print__ + __result__, end='\\r')\n",
+    "\n",
+    "\n",
+    "        test_acc = _test(cnn, criterion)\n",
+    "        if print_output:\n",
+    "            print('\\n')\n",
+    "\n",
+    "        scheduler.step()\n",
+    "\n",
+    "        training_log['epoch_timings'].append(time() - epoch_start_time)\n",
+    "        training_log['train_acc'].append(accuracy)\n",
+    "        training_log['test_acc'].append(test_acc)\n",
+    "        training_log['train_loss'].append(xentropy_loss_avg / (i + 1))\n",
+    "    \n",
+    "    cleanup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# torch.cuda.device_count()\n",
+    "\n",
+    "mp.spawn(train, \n",
+    "         args=(world_size,),\n",
+    "         nprocs=world_size,\n",
+    "         join=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trainer(rank, world_size):\n",
+    "    print(f\"Running DDP on rank {rank}.\")\n",
+    "    setup(rank, world_size)\n",
+    "\n",
+    "    # create model and move it to GPU with id rank\n",
+    "    # model = ToyModel().to(rank)\n",
+    "    model = models.__getattribute__(config['model_name'])().to(rank)\n",
+    "    ddp_model = DDP(model, device_ids=[rank])\n",
+    "\n",
+    "    loss_fn = nn.MSELoss()\n",
+    "    optimizer = optim.SGD(ddp_model.parameters(), lr=0.001)\n",
+    "\n",
+    "    optimizer.zero_grad()\n",
+    "    outputs = ddp_model(torch.randn(20, 10))\n",
+    "    labels = torch.randn(20, 5).to(rank)\n",
+    "    loss_fn(outputs, labels).backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    cleanup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c= {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = c.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = models.__getattribute__(config['model_name'])()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# config['num_of_paramters'] = sum(p.numel() for p in model_p.parameters())\n",
+    "# config['gpu'] = torch.cuda.get_device_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_demo(train_fn, world_size):\n",
+    "    mp.spawn(train_fn,\n",
+    "             args=(world_size,),\n",
+    "             nprocs=world_size,\n",
+    "             join=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_demo(trainer, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    n_gpus = torch.cuda.device_count()\n",
+    "    if n_gpus < 8:\n",
+    "        print(f\"Requires at least 8 GPUs to run, but got {n_gpus}.\")\n",
+    "    else:\n",
+    "        run_demo(demo_basic, 8)\n",
+    "        #run_demo(demo_checkpoint, 8)\n",
+    "        #run_demo(demo_model_parallel, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.multiprocessing as mp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simple(rank, world_size, arg1, arg2):\n",
+    "    setup(rank, world_size)\n",
+    "    print(f'Arg 1 = {arg1}')\n",
+    "    print(f'Arg 2 = {arg2}')\n",
+    "    print(f'World size = {world_size}')\n",
+    "    print(f'World size = {rank}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training data saved successfully.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<torch.multiprocessing.spawn.ProcessContext at 0x238ff89a288>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "mp.spawn(simple, \n",
+    "         args=(1, \"argument1\", \"argument2\", ),\n",
+    "         nprocs=1,\n",
+    "         join=False\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
